--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    android:shape="rectangle" >
     <corners
-        android:radius="45dp"
+        android:radius="50dp"
         />
     <gradient
         android:angle="45"
-        android:centerX="35%"
-
+        android:centerX="30%"
         android:startColor="@color/c"
-        android:centerColor="@color/z"
+        android:centerColor="@color/l"
         android:endColor="@color/c"
         android:type="linear"
         />
@@ -21,11 +20,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="300dp"
-        android:height="40dp"
+        android:width="120dp"
+        android:height="70dp"
         />
     <stroke
         android:width="5dp"
-        android:color="@color/c"
+        android:color="@color/l"
         />
 </shape>
