--- a/app/src/main/res/drawable/extradesign.xml
+++ b/app/src/main/res/drawable/extradesign.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    android:shape="rectangle" >
     <corners
-        android:radius="40dp"
+        android:radius="30dp"
         />
     <gradient
         android:angle="45"
-        android:centerX="40%"
-        android:startColor="@color/k"
-        android:centerColor="@color/p"
-        android:endColor="@color/k"
+        android:centerX="30%"
+        android:centerColor="@color/l"
+        android:startColor="@color/a"
+        android:endColor="@color/a"
         android:type="linear"
         />
     <padding
@@ -20,11 +19,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="350dp"
-        android:height="45dp"
+        android:width="500dp"
+        android:height="500dp"
         />
     <stroke
-        android:width="5dp"
-        android:color="@color/c"
+        android:width="6dp"
+        android:color="@color/l"
         />
 </shape>
