--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_height="450dp"
         android:layout_weight="3"
         android:layout_margin="5dp"
-        android:background="@drawable/background_y"
+        android:background="@drawable/extradesign"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -25,6 +25,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:gravity="center">
 
             <TextView
@@ -83,7 +84,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
                 <Button
                     android:id="@+id/btnStart"
@@ -154,64 +156,100 @@
                 android:text="Check Connection" />
         </LinearLayout>
 
-        <LinearLayout
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:layout_marginBottom="6dp">
 
-            <ImageButton
-                android:id="@+id/truckId"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/truck"/>
+                android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/cycleId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/cycle"/>
+                <Button
+                    android:id="@+id/bikeId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/bike"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="24dp"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/g"
+                    android:text="Bike"/>
 
-            <ImageButton
-                android:id="@+id/busId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/bus"/>
+                <Button
+                    android:id="@+id/busId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/bus"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="24dp"
+                    android:textColor="@color/g"
+                    android:text="Bus"/>
+
+                <Button
+                    android:id="@+id/truckId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/truck"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="24dp"
+                    android:textColor="@color/g"
+                    android:text="Truck"/>
+
+                <Button
+                    android:id="@+id/cycleId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/cycle"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="24dp"
+                    android:textColor="@color/g"
+                    android:text="Cycle"/>
 
 
-            <ImageButton
-                android:id="@+id/distanceTwoPlace"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/distanced"/>
 
-            <ImageButton
-                android:id="@+id/bikeId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/bike"/>
+                <Button
+                    android:id="@+id/policeStationId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/policestation"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="22dp"
+                    android:textColor="@color/g"
+                    android:text="Police.S"/>
 
-            <ImageButton
-                android:id="@+id/policeStationId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/policestation"/>
+                <Button
+                    android:id="@+id/drivingLicenseId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/licenseb"
+                    android:background="@drawable/circle"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textSize="22dp"
+                    android:textColor="@color/g"
+                    android:text="License"/>
 
-            <ImageButton
-                android:id="@+id/drivingLicenseId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/licenseb"/>
 
-        </LinearLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -299,6 +337,19 @@
                         android:drawableTop="@drawable/destinationy"
                         android:background="@drawable/logical"
                         android:text="Track On" />
+
+                <Button
+                    android:id="@+id/distanceTwoPlace"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="25dp"
+                    android:textColor="@color/a"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
+                    android:drawableTop="@drawable/distanced"
+                    android:background="@drawable/logical"
+                    android:text="Distance Two Place" />
 
             </LinearLayout>
         </ScrollView>
