--- a/app/src/main/res/layout/activity_police_station.xml
+++ b/app/src/main/res/layout/activity_police_station.xml
@@ -6,7 +6,102 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/vehiclem"
-    android:padding="10dp"
+    android:padding="12dp"
+    android:gravity="center"
     tools:context=".PoliceStation">
+
+    <Button
+        android:id="@+id/barishalButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Barishal"/>
+
+    <Button
+        android:id="@+id/chittagongButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Chittagong"/>
+
+    <Button
+        android:id="@+id/dhakalButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Dhaka"/>
+
+    <Button
+        android:id="@+id/mymensinghButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:text="Mymensingh"/>
+
+    <Button
+        android:id="@+id/khulnalButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:text="Khulna"/>
+
+    <Button
+        android:id="@+id/rajshahiButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Rajshahi"/>
+
+    <Button
+        android:id="@+id/rangpurlButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Rangpur"/>
+
+    <Button
+        android:id="@+id/sylhetButtonId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/a"
+        android:text="Sylhet"/>
 
 </LinearLayout>
