--- a/app/src/main/res/layout/activity_chittagong.xml
+++ b/app/src/main/res/layout/activity_chittagong.xml
@@ -93,7 +93,7 @@
                 android:text="Cox's Bazar" />
 
             <Button
-                android:id="@+id/cumillaOffice"
+                android:id="@+id/comillaOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -102,7 +102,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Cumilla" />
+                android:text="Comilla" />
 
             <Button
                 android:id="@+id/feniOffice"
