--- a/app/src/main/res/layout/activity_tourist_place.xml
+++ b/app/src/main/res/layout/activity_tourist_place.xml
@@ -9,8 +9,16 @@
     android:background="@drawable/background_y"
     tools:context=".TouristPlace">
 
+    <SearchView
+        android:id="@+id/searchTouristPlace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Search Here"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/logical">
 
-
+    </SearchView>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -35,7 +43,7 @@
                 android:text="Bagerhat" />
 
             <Button
-                android:id="@+id/BandarbanTourist"
+                android:id="@+id/bandarbanTourist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
