--- a/app/src/main/res/drawable/upazila.xml
+++ b/app/src/main/res/drawable/upazila.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:radius="45dp"
+        android:radius="40dp"
         />
     <gradient
         android:angle="45"
-        android:centerX="35%"
-        android:centerColor="@color/l"
-        android:startColor="@color/a"
-        android:endColor="@color/a"
+        android:centerX="40%"
+        android:centerColor="@color/k"
+        android:startColor="@color/e"
+        android:endColor="@color/e"
         android:type="linear"
         />
     <padding
@@ -19,11 +19,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="350dp"
-        android:height="170dp"
+        android:width="300dp"
+        android:height="50dp"
         />
     <stroke
         android:width="5dp"
-        android:color="@color/c"
+        android:color="@color/s"
         />
 </shape>
